--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8761716240458120"
+     crossorigin="anonymous"></script>
     <title>Top 5 Schools in Shadnagar Town</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="keyword" content="schools in shadnagar">
